--- a/VaccineC/src/app/pages/pessoas/pessoas.component.scss
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.scss
@@ -70,3 +70,24 @@
   font-size: 12px !important;
   color: #858796 !important;
 }
+
+.complement-group {
+  font-size: 14px;
+}
+
+.div-row-input .mat-form-field+.mat-form-field {
+  margin-left: 8px;
+}
+
+.div-row-input-table {
+  padding-bottom: 1.34375em;
+}
+
+.complement-button-row button,
+.complement-button-row a {
+  margin-right: 0.5rem;
+}
+
+.complement-button-row {
+  margin: 0.75rem !important;
+}
