--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -11,8 +11,7 @@
             <div class="col-sm-11 p-0 d-flex">
               <mat-form-field class="search-form-field col-sm-9" appearance="outline">
                 <mat-label>Digite o nome da pessoa ou o CPF</mat-label>
-                <input id="searchPersonName" matInput type="text" [(ngModel)]="searchPersonName"
-                  placeholder="(mínimo 3 caracteres)">
+                <input id="searchPersonName" matInput type="text" [(ngModel)]="searchPersonName">
                 <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                   <mat-icon>close</mat-icon>
                 </button>
@@ -92,7 +91,7 @@
           <form [formGroup]="personForm">
             <div class="registration-group">
               <div class="offset-sm-1 col-sm-11 p-0">
-                <div class="div-row-input-table">
+                <div class="div-row-input-table p-0">
 
                   <mat-form-field [hidden]="true">
                     <input matInput #PersonId formControlName="PersonId" id="PersonId" [(ngModel)]="personId">
@@ -102,14 +101,15 @@
                     <tr>
                       <td>
                         <!-- Foto -->
-                        <div *ngIf="!profilePic"
-                              id="profilePic"
-                              style="background-image: url(../../../assets/img/default-profile-pic.png)">
+                        <div *ngIf="!profilePicExhibition" id="profilePicExhibition"
+                          style="background-image: url(../../../assets/img/default-profile-pic.png)">
                         </div>
-                          <img id="profilePic"
-                               *ngIf="profilePic"
-                               src="{{profilePic}}"
-                               alt="foto de perfil">
+                        <img id="profilePicExhibition" *ngIf="profilePicExhibition" src="{{profilePicExhibition}}"
+                          alt="foto de perfil" class="mb-2">
+
+                        <!-- IMPORTAR IMAGEM -->
+                        <app-upload-file (onUploadFinished)="uploadFinished($event)" class="d-flex justify-content-center"></app-upload-file>
+
                       </td>
                       <td class="table-name col-sm-11">
                         <!-- NOME DA PESSOA -->
@@ -160,6 +160,9 @@
                     <input matInput #Emailinput formControlName="Email" [maxlength]="255"
                       placeholder="email@exemplo.com.br" id="email" [(ngModel)]="email">
                     <mat-hint align="end">{{Emailinput.value?.length || 0}}/255</mat-hint>
+                    <mat-error *ngIf="personForm.controls.Email.touched && personForm.controls.Email.invalid">
+                      <span *ngIf="personForm.controls.Email.errors?.email">Informe um e-mail válido.</span>
+                    </mat-error>
                   </mat-form-field>
                 </div>
 
@@ -173,9 +176,6 @@
                 </div>
 
                 <div class="div-row-input registration-button-row">
-
-                  <!-- IMPORTAR IMAGEM -->
-                  <app-upload-file (onUploadFinished)="uploadFinished($event)"></app-upload-file>
 
                   <!-- SALVAR -->
                   <button mat-raised-button class="create-button" (click)="createUpdatePerson()" type="button"
