--- a/VaccineC/src/app/pages/pessoas/pessoas.component.scss
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.scss
@@ -51,7 +51,7 @@
   padding-right: 0px;
 }
 
-#profilePic {
+#profilePicExhibition {
   width: 100px;
   height: 100px;
   background-size: cover;
@@ -59,7 +59,6 @@
   border-radius: 50%;
   margin-right: 0.75rem;
   margin-left: 0.75rem;
-  cursor: pointer;
 }
 
 .div-row-input-table {
